--- a/style.css
+++ b/style.css
@@ -16,12 +16,16 @@ span{
     background-size: cover;
     pointer-events: none;
     position: absolute;
-    left: 50%;
-    top: 50%;
+    left: 2%;
+    top: 2%;
     transform: translate(-50%,-50%);
     animation: animate 6s linear;
+    z-index: 1;
 }
 
+h4{
+    text-transform: uppercase;
+}
 
 .content{
     width: 500px;
@@ -33,7 +37,7 @@ span{
     padding: 10px;
     box-shadow: 2px 2px 20px #91919191;
     position: absolute;
-    z-index: 1000;
+    z-index: 100000;
 }
 
 .content input{
@@ -48,7 +52,7 @@ span{
 }
 
 button{
-    background-color: #e93b81;
+    background-color: #ef0c67;
     color: #fff;
     margin-top: 15px;
     padding: 15px 150px;
@@ -57,6 +61,10 @@ button{
     font-size: 18px;
     font-weight: 700;
     cursor: pointer;
+}
+
+button:hover{
+    background-color: #e22a74;
 }
 
 @keyframes animate{
