--- a/style.css
+++ b/style.css
@@ -67,6 +67,14 @@ button:hover{
     background-color: #e22a74;
 }
 
+#msg{
+    color: rgb(255, 3, 3);
+    font-size: 16px;
+    font-weight: 600;
+    margin: 7px;
+    text-transform: capitalize;
+}
+
 @keyframes animate{
     0%{
         transform: translate(-50%,-50%);
